[workspace]
members = ["packages/*", "contracts/*"]

resolver = "2"

[workspace.package]
version = "2.0.0"

[workspace.dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-storage-plus = "1.2.0"
schemars = "0.8.15"
cw2 = "1.1.2"
sha3 = "0.10"
secp256k1 = "0.22.0"
serde_json = "1.0"
bech32 = "0.8.0"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.57" }
tiny-keccak = { version = "2.0", features = ["keccak"] }

avs-directory = { path = "contracts/avs-directory", version = "0.2.0", features = ["library"] }
delegation-manager = { path = "contracts/delegation-manager", version = "0.2.0", features = ["library"] }
rewards-coordinator = { path = "contracts/rewards-coordinator", version = "0.2.0", features = ["library"] }
slash-manager = { path = "contracts/slash-manager", version = "0.2.0", features = ["library"] }
strategy-manager = { path = "contracts/strategy-manager", version = "0.2.0", features = ["library"] }
cw20 = { path = "packages/cw20", version = "2.0.0-rc.0" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
