[workspace]
members = [
    "contracts/avs-directory",
    # "contracts/strategy-base",
    # "contracts/strategy-manager",
    # "contracts/state-bank",
    # "contracts/avs-driver",
    "contracts/delegation-manager",
    "contracts/rewards-coordinator",
    ]

resolver = "2"

[workspace.dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std = "2.0.0"
cw-storage-plus = "2.0.0"
cosmwasm-storage = "1.5.2"
schemars = "0.8.8"
cw2 = "2.0.0"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-multi-test = "2.0.0"
sha2 = { version = "0.10.8", default-features = false }
hex = "0.4"
cosmwasm-crypto = "2.1.0"
secp256k1 = "0.29.0"
cw20 = "2.0.0"
bech32 = "0.8.0"
ripemd = "0.1.0"
serde_json = "1.0.0"
base64 = "0.22.1"

common = { path = "packages/common"}

