[workspace]
members = [
  # CosmWasm Contracts
  "bvs-strategy-base",
  "bvs-strategy-manager",
  "bvs-directory",
  "bvs-delegation-manager",
  "bvs-rewards-coordinator",
  "bvs-slash-manager",

  # CosmWasm Library
  "bvs-library",

  # BVS CosmWasm
  "bvs-pauser",
  "bvs-vault-router",
  "bvs-vault-base",
  "bvs-vault-bank",
  "bvs-vault-cw20",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["SatLayer"]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/satlayer/satlayer-bvs.git"
homepage = "https://satlayer.xyz/"
documentation = "https://github.com/satlayer/satlayer-bvs.git"
keywords = ["SatLayer", "Restaking", "BTC", "cosmos", "cosmwasm"]

[workspace.dependencies]
# CosmWasm Core
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = [
  # https://github.com/babylonlabs-io/babylon/blob/d065cdd9d7f1219fece38cb678d1233566cf530b/app/keepers/keepers.go#L101
  "cosmwasm_2_0",
] }
cosmwasm-crypto = "2.2.2"
cw-multi-test = { version = "2.3.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

# CosmWasm Utilties
sha2 = { version = "0.10.8", default-features = false }
hex = "0.4"
secp256k1 = "0.29.1"
cw20 = "2.0.0"
cw20-base = "2.0.0"
bech32 = "0.8.0"
ripemd = "0.1.0"
serde_json = "1.0.139"
base64 = "0.22.1"
cw-utils = "2.0.0"
rs_merkle = "=1.4"

# CosmWasm Libraries & Contracts
bvs-library = { path = "./bvs-library" }
bvs-pauser = { path = "./bvs-pauser", features = ["library"] }

bvs-delegation-manager = { path = "./bvs-delegation-manager", features = ["library"] }
bvs-directory = { path = "./bvs-directory", features = ["library"] }
bvs-rewards-coordinator = { path = "./bvs-rewards-coordinator", features = ["library"] }
bvs-slash-manager = { path = "./bvs-slash-manager", features = ["library"] }
bvs-strategy-base = { path = "./bvs-strategy-base", features = ["library"] }
bvs-strategy-manager = { path = "./bvs-strategy-manager", features = ["library"] }
