[workspace]
members = [
  # BVS CosmWasm Library
  "bvs-library",
  # BVS CosmWasm Core Components
  "bvs-pauser",
  "bvs-registry",
  # BVS CosmWasm Vault Components
  "bvs-vault-router",
  "bvs-vault-base",
  "bvs-vault-bank",
  "bvs-vault-cw20",
  "bvs-vault-cw20-tokenized",
  "bvs-vault-factory",
  # BVS Optional Components
  "bvs-rewards",
  # BVS CosmWasm Test Components
  "bvs-multi-test",
]

resolver = "2"

[workspace.package]
# Version is managed by `.github/workflows/release.yml`
version = "0.0.0"
authors = ["SatLayer"]
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/satlayer/satlayer-bvs.git"
homepage = "https://satlayer.xyz/"
documentation = "https://github.com/satlayer/satlayer-bvs.git"
description = "SatLayer Bitcoin Validated Service"
keywords = ["SatLayer", "Restaking", "BTC", "cosmos", "cosmwasm"]

[workspace.dependencies]
# CW Core
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = [
  # https://github.com/babylonlabs-io/babylon/blob/d065cdd9d7f1219fece38cb678d1233566cf530b/app/keepers/keepers.go#L101
  "cosmwasm_2_0",
] }
cosmwasm-crypto = "2.2.2"
cw-multi-test = { version = "2.4.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
rs_merkle = { version = "1.5.0", default-features = false }
prost = "0.13.5"
# CW Standards & Utility
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cw-utils = "2.0.0"

# CosmWasm Libraries & Contracts
bvs-library = { path = "./bvs-library", version = "0.0.0" }
bvs-pauser = { path = "./bvs-pauser", features = ["library"], version = "0.0.0" }
bvs-registry = { path = "./bvs-registry", features = ["library"], version = "0.0.0" }

bvs-vault-router = { path = "./bvs-vault-router", features = ["library"], version = "0.0.0" }
bvs-vault-base = { path = "./bvs-vault-base", features = ["library"], version = "0.0.0" }
bvs-vault-bank = { path = "./bvs-vault-bank", features = ["library"], version = "0.0.0" }
bvs-vault-cw20 = { path = "./bvs-vault-cw20", features = ["library"], version = "0.0.0" }
bvs-vault-cw20-tokenized = { path = "./bvs-vault-cw20-tokenized", features = ["library"], version = "0.0.0" }
bvs-vault-factory = { path = "./bvs-vault-factory", features = ["library"], version = "0.0.0" }

bvs-rewards = { path = "./bvs-rewards", features = ["library"], version = "0.0.0" }
