[package]
name = "avs-directory"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
babylon-bindings = { git = "https://github.com/babylonchain/bindings", tag = "v0.1.0" }
cosmwasm-schema = "2.1.0"
cosmwasm-std = "2.1.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = { version = "1.0.57" }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[dev-dependencies]
