[package]
name = "avs-directory"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tiny-keccak = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
bech32 = { workspace = true }

[dev-dependencies]