[package]
name = "avs-directory"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tiny-keccak = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
bech32 = { workspace = true }
secp256k1-sys = { workspace = true }
semver = { workspace = true }
schemars = { workspace = true }
cosmwasm-schema = { workspace = true }

[dev-dependencies]
cw-utils = { workspace = true }
cw-multi-test = { workspace = true }