[package]
name = "delegation-manager"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
babylon-bindings = {git = "https://github.com/babylonchain/bindings", tag = "v0.1.0"}
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = { version = "1.0.57" }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[dev-dependencies]
