# [package]
# name = "strategy-manager"
# version = "0.1.0"
# edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# backtraces = ["cosmwasm-std/backtraces"]
# library = []

# [dependencies]
# cosmwasm-std = { workspace = true }
# cw-storage-plus = { workspace = true }
# cw2 = { workspace = true }
# thiserror = { workspace = true }
# serde = { workspace = true }
# tiny-keccak = { workspace = true }
# secp256k1 = { workspace = true }
# serde_json = { workspace = true }
# sha3 = { workspace = true }
# bech32 = { workspace = true }
# secp256k1-sys = { workspace = true }
# schemars = { workspace = true }
# cosmwasm-schema = { workspace = true }

# [dev-dependencies]