[package]
name = "bvs-directory"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.optimizer]
standard-build = false
builds = [
    { name = "", default-features = false },
]

[features]
default = ["testing"]
library = []
testing = ["library", "dep:cw-multi-test", "bvs-library/testing"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
bvs-library = { workspace = true }
bvs-registry = { workspace = true }
bvs-delegation-manager = { workspace = true }
cw-multi-test = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
bvs-library = { workspace = true, features = ["testing"] }
bvs-registry = { workspace = true, features = ["testing"] }
bvs-delegation-manager = { workspace = true, features = ["testing"] }
