[package]
name = "bvs-directory"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }

bvs-library = { workspace = true }
bvs-pauser = { workspace = true }
bvs-delegation-manager = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true }
bvs-strategy-base = { workspace = true }
bvs-strategy-manager = { workspace = true }
