[package]
name = "bvs-library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["testing"]
testing = ["dep:cw-multi-test"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-crypto = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true }
bech32 = { workspace = true }
ripemd = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
cw-multi-test = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
