[package]
name = "bvs-library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-crypto = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
secp256k1 = "0.29.1"
sha2 = { version = "0.10.8", default-features = false }
bech32 = "0.8.0"
ripemd = "0.1.0"
base64 = "0.22.1"
