[package]
name = "bvs-multi-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }

cw20 = { workspace = true }
cw20-base = { workspace = true }
bvs-library = { workspace = true }
bvs-pauser = { workspace = true }
bvs-registry = { workspace = true }
bvs-vault-router = { workspace = true }
bvs-vault-bank = { workspace = true }
bvs-vault-cw20 = { workspace = true }
bvs-guardrail = { workspace = true }
bvs-vault-factory = { workspace = true }
