[package]
name = "bvs-rewards-coordinator"
version = "2.0.0"
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
testing = ["library", "dep:cw-multi-test"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
bvs-base = { workspace = true }
base64 = { workspace = true }
cw-multi-test = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }