[package]
name = "bvs-slash-manager"
version = "2.0.0"
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
testing = ["library", "dep:cw-multi-test"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-crypto = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
bech32 = { workspace = true }
ripemd = { workspace = true }
base64 = { workspace = true }
bvs-base = { workspace = true }
serde_json = { workspace = true }
cw-multi-test = { workspace = true, optional = true }
bvs-strategy-manager = { workspace = true, features = ["library"] }
bvs-delegation-manager = { workspace = true, features = ["library"] }
bvs-registry = { workspace = true, features = ["library"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
bvs-testing = { workspace = true }
