[package]
name = "bvs-slash-manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-crypto = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }

serde_json = "1.0.139"
secp256k1 = "0.29.1"
hex = "0.4"
bech32 = "0.8.0"
ripemd = "0.1.0"
base64 = "0.22.1"

bvs-library = { workspace = true }
bvs-pauser = { workspace = true }
bvs-strategy-manager = { workspace = true }
bvs-delegation-manager = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true }
bvs-strategy-base = { workspace = true }
