[package]
name = "bvs-strategy-base"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.optimizer]
standard-build = false
builds = [
    { name = "", default-features = false },
]

[features]
default = ["testing"]
library = []
testing = ["library", "dep:cw-multi-test", "dep:cw20-base"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bvs-base = { workspace = true }
cw-multi-test = { workspace = true, optional = true }
bvs-library = { workspace = true }
bvs-registry = { workspace = true }
cw20-base = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
bvs-registry = { workspace = true, features = ["testing"] }
cw20-base = { workspace = true }
