[package]
name = "bvs-strategy-factory"
version = "2.0.0"
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
cosmwasm-schema = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
cosmwasm-crypto = { workspace = true }
secp256k1 = { workspace = true }
bech32 = { workspace = true }
cw20 = { workspace = true }
ripemd = { workspace = true }
bvs-base = { workspace = true }
base64 = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
bvs-strategy-base = { path = "../bvs-strategy-base" }
bvs-strategy-manager = { path = "../bvs-strategy-manager" }
cw20-base = { workspace = true }
