[package]
name = "bvs-strategy-manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.optimizer]
standard-build = false
builds = [
    { name = "", default-features = false },
]

[features]
default = ["testing"]
library = []
testing = ["library", "dep:cw-multi-test"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bvs-base = { workspace = true }
cw-multi-test = { workspace = true, optional = true }
bvs-registry = { workspace = true, features = ["library"] }
bvs-strategy-base = { workspace = true, features = ["library"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
bvs-registry = { workspace = true }