[package]
name = "bvs-vault-factory"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

include = ["src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
cw-utils = { workspace = true }

bvs-library = { workspace = true }
bvs-pauser = { workspace = true }
bvs-vault-base = { workspace = true }
bvs-vault-router = { workspace = true }
bvs-vault-bank = { workspace = true }
bvs-vault-cw20 = { workspace = true }
bvs-registry = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true }
